Amarok ChangeLog
================
(C) 2002-2013 the Amarok authors.

VERSION 2.8-Beta 1
  FEATURES:
   * Playlist files are now read asynchronously when possible; patch and great
     deal of refactoring by Tatjana Gornak. (BR 291934)
   * Added support to filter tracks to scrobble to Last.fm by label. Patch by
     Vedant Agarwala. (BR 140198)
   * Added transcoding support for Opus codec if ffmpeg is compiled with
     support for the libopus library, patch by Martin Brodbeck.
   * Added keyboard shortcuts for small 2 s seeks (Ctrl + Left/Right) and long 1 minute
     seeks (Shift + Left/Right) in addition to standard 10 s seeks. Durations are now
     configurable in amarokrc, see Amarok Handbook. Patch by Anmol Ahuja. (BR 177258)
   * Added support for files in Opus codec if Amarok is compiled against recent
     enough TagLib (post 1.8), patch by Martin Brodbeck. (BR 312905)
   * Added Ctrl+H shortcut to randomize playlist, patch by Harsh Gupta. (BR 208061)

  CHANGES:
   * Add note about generating .mood files into Moodbar Options; patch by Harsh
     Gupta with tweaks by Matěj Laitl. (BR 289483)
   * Amarok now depends on Qt 4.8.2
   * Add prepareToQuit() signal to Amarok.Window script bindings; patch by
     Anmol Ahuja. (BR 241066)
   * Data CDs are now recognized in Amarok; patch by Anmol Ahuja. (BR 316128)
   * On-Screen-Display now uses the system font instead of hardcoded sans-serif
     (BR 248707)
   * On-Screen-Display fades in/out smoothly.
   * Problematic support for treating MusicBrainz ids as track unique ids was dropped;
     should avoid surprising "Duplicate Tracks Found" errors. (BR 315329)
   * Fancy behavior of some context menus showing different actions when Shift
     key is held has been reverted. All entries are now shown all the time.
   * The dynamic playlist behaviour has changed. It will not longer
     generate "pretty good" playlists that do not fullfill the
     given biases. Instead it might add no song at all if given