@@ -112,7 +112,7 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="2" column="0">
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
       <string>Sound System Configuration</string>
@@ -179,6 +179,41 @@
          </size>
         </property>
        </spacer>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QGroupBox" name="groupBox_3">
+     <property name="title">
+      <string>System Suspend Options</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QCheckBox" name="kcfg_InhibitSuspend">
+        <property name="toolTip">
+         <string>If enabled, Amarok will prevent the system from automatically suspending if it is playing a track</string>
+        </property>
+        <property name="whatsThis">
+         <string>If enabled, Amarok will prevent the system from automatically suspending if it is playing a track</string>
+        </property>
+        <property name="text">
+         <string>&amp;Inhibit automatic suspend if playing</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="kcfg_PauseOnSuspend">
+        <property name="toolTip">
+         <string>If enabled, Amarok will pause the currently playing track on suspend</string>
+        </property>
+        <property name="whatsThis">
+         <string>If enabled, Amarok will pause the currently playing track on suspend</string>
+        </property>
+        <property name="text">
+         <string>&amp;Pause playback on suspend</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
