@@ -4,6 +4,8 @@ Amarok ChangeLog
 
 VERSION 2.8-Beta 1
   FEATURES:
+   * Added options to pause playback on system suspend and to inhibit automatic suspend
+     if playing a track (enabled by default); patch by Anmol Ahuja. (BR 259862, 222571)
    * Playlist files are now read asynchronously when possible; patch and great
      deal of refactoring by Tatjana Gornak. (BR 291934)
    * Added support to filter tracks to scrobble to Last.fm by label. Patch by
